--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
   "name": "task-management",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "private": "true",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "server:install": "npm install --prefix server",
+    "client:install": "npm install --prefix client",
+    "installDeps": "concurrently \"npm run server:install\" \"npm run client:install\"",
+    "server:start": "npm run start --prefix server",
+    "client:start": "npm run start --prefix client",
+    "start": "concurrently -n \"SERVER,CLIENT\" -c \"blue,green\" -p \"[{name}]\" \"npm run server:start\" \"npm run client:start\""
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "concurrently": "^8.2.2"
   }
 }
