--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "task-management": "file:.."
