--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.4",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
-    "task-management": "file:.."
+    "mongoose": "^8.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
